welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:23: error: not found: value Droite
	Droite
        ^